add_executable (erkale_fitopt fitopt.cpp energy-opt.cpp erifit.cpp)
set_target_properties(erkale_fitopt PROPERTIES OUTPUT_NAME "erkale_fitopt${SUFFIX}")
target_link_libraries(erkale_fitopt liberkale_cmp)
target_link_libraries(erkale_fitopt liberkale_emd)
target_link_libraries(erkale_fitopt liberkale)
# Link other libraries if necessary
if(BUILD_SHARED_LIBS)
else()
 target_link_libraries(erkale_fitopt -lrt)
 target_link_libraries(erkale_fitopt ${GSL_LIBRARIES})
 target_link_libraries(erkale_fitopt ${LAPACK_LIBRARIES})
 target_link_libraries(erkale_fitopt ${LIBINT_LIBRARIES})
 target_link_libraries(erkale_fitopt ${LIBXC_LIBRARIES})
 target_link_libraries(erkale_fitopt ${HDF5_LIBRARIES})
endif()

add_executable (erkale_adaptopt adaptopt.cpp energy-opt.cpp erifit.cpp)
set_target_properties(erkale_adaptopt PROPERTIES OUTPUT_NAME "erkale_adaptopt${SUFFIX}")
target_link_libraries(erkale_adaptopt liberkale_cmp)
target_link_libraries(erkale_adaptopt liberkale_emd)
target_link_libraries(erkale_adaptopt liberkale)
# Link other libraries if necessary
if(BUILD_SHARED_LIBS)
else()
 target_link_libraries(erkale_adaptopt -lrt)
 target_link_libraries(erkale_adaptopt ${GSL_LIBRARIES})
 target_link_libraries(erkale_adaptopt ${LAPACK_LIBRARIES})
 target_link_libraries(erkale_adaptopt ${LIBINT_LIBRARIES})
 target_link_libraries(erkale_adaptopt ${LIBXC_LIBRARIES})
 target_link_libraries(erkale_adaptopt ${HDF5_LIBRARIES})
endif()
