add_executable (erkale_dumpxc dumpxc.cpp)
set_target_properties(erkale_dumpxc PROPERTIES OUTPUT_NAME "erkale_dumpxc${SUFFIX}")
target_link_libraries(erkale_dumpxc liberkale_cmp)
target_link_libraries(erkale_dumpxc liberkale_emd)
target_link_libraries(erkale_dumpxc liberkale)
# Link other libraries if necessary
if(BUILD_SHARED_LIBS)
else()
 target_link_libraries(erkale_dumpxc -lrt)
 target_link_libraries(erkale_dumpxc ${GSL_LIBRARIES})
 target_link_libraries(erkale_dumpxc ${LAPACK_LIBRARIES})
 target_link_libraries(erkale_dumpxc ${LIBINT_LIBRARIES})
 target_link_libraries(erkale_dumpxc ${LIBXC_LIBRARIES})
 target_link_libraries(erkale_dumpxc ${HDF5_LIBRARIES})
endif()
