add_executable (erkale_dumpxc dumpxc.cpp)
set_target_properties(erkale_dumpxc PROPERTIES OUTPUT_NAME "erkale_dumpxc${SUFFIX}")
target_link_libraries(erkale_dumpxc liberkale_cmp)
target_link_libraries(erkale_dumpxc liberkale_emd)
target_link_libraries(erkale_dumpxc liberkale)
# Link other libraries if necessary
if(BUILD_SHARED_LIBS)
else()
 target_link_libraries(erkale_dumpxc -lrt)
 target_link_libraries(erkale_dumpxc ${GSL_LIBRARIES})
 target_link_libraries(erkale_dumpxc ${LAPACK_LIBRARIES})
 target_link_libraries(erkale_dumpxc ${LIBINT_LIBRARIES})
 target_link_libraries(erkale_dumpxc ${LIBXC_LIBRARIES})
 target_link_libraries(erkale_dumpxc ${HDF5_LIBRARIES})
endif()

add_executable (erkale_moints moints.cpp)
set_target_properties(erkale_moints PROPERTIES OUTPUT_NAME "erkale_moints${SUFFIX}")
target_link_libraries(erkale_moints liberkale_cmp)
target_link_libraries(erkale_moints liberkale_emd)
target_link_libraries(erkale_moints liberkale)
# Link other libraries if necessary
if(BUILD_SHARED_LIBS)
else()
 target_link_libraries(erkale_moints -lrt)
 target_link_libraries(erkale_moints ${GSL_LIBRARIES})
 target_link_libraries(erkale_moints ${LAPACK_LIBRARIES})
 target_link_libraries(erkale_moints ${LIBINT_LIBRARIES})
 target_link_libraries(erkale_moints ${LIBXC_LIBRARIES})
 target_link_libraries(erkale_moints ${HDF5_LIBRARIES})
endif()

add_executable (erkale_rimp2 rimp2.cpp)
set_target_properties(erkale_rimp2 PROPERTIES OUTPUT_NAME "erkale_rimp2${SUFFIX}")
target_link_libraries(erkale_rimp2 liberkale_cmp)
target_link_libraries(erkale_rimp2 liberkale_emd)
target_link_libraries(erkale_rimp2 liberkale)
# Link other libraries if necessary
if(BUILD_SHARED_LIBS)
else()
 target_link_libraries(erkale_rimp2 -lrt)
 target_link_libraries(erkale_rimp2 ${GSL_LIBRARIES})
 target_link_libraries(erkale_rimp2 ${LAPACK_LIBRARIES})
 target_link_libraries(erkale_rimp2 ${LIBINT_LIBRARIES})
 target_link_libraries(erkale_rimp2 ${LIBXC_LIBRARIES})
 target_link_libraries(erkale_rimp2 ${HDF5_LIBRARIES})
endif()

add_executable (erkale_boystest boystest.cpp)
set_target_properties(erkale_boystest PROPERTIES OUTPUT_NAME "erkale_boystest${SUFFIX}")
target_link_libraries(erkale_boystest liberkale_cmp)
target_link_libraries(erkale_boystest liberkale_emd)
target_link_libraries(erkale_boystest liberkale)
# Link other libraries if necessary
if(BUILD_SHARED_LIBS)
else()
 target_link_libraries(erkale_boystest -lrt)
 target_link_libraries(erkale_boystest ${GSL_LIBRARIES})
 target_link_libraries(erkale_boystest ${LAPACK_LIBRARIES})
 target_link_libraries(erkale_boystest ${LIBINT_LIBRARIES})
 target_link_libraries(erkale_boystest ${LIBXC_LIBRARIES})
 target_link_libraries(erkale_boystest ${HDF5_LIBRARIES})
endif()
